--- a/src/main/resources/assets/metallurgyclassic/lang/en_us.json
+++ b/src/main/resources/assets/metallurgyclassic/lang/en_us.json
@@ -590,5 +590,15 @@
   "item.metallurgyclassic.haderoth_boots": "Haderoth Boots",
   "item.metallurgyclassic.celenegil_boots": "Celenegil Boots",
   "item.metallurgyclassic.tartarite_boots": "Tartarite Boots",
-  "item.metallurgyclassic.desichalkos_boots": "Desichalkos Boots"
+  "item.metallurgyclassic.desichalkos_boots": "Desichalkos Boots",
+  "block.metallurgyclassic.stone_crusher": "Stone Crusher",
+  "block.metallurgyclassic.copper_crusher": "Copper Crusher",
+  "block.metallurgyclassic.bronze_crusher": "Bronze Crusher",
+  "block.metallurgyclassic.iron_crusher": "Iron Crusher",
+  "block.metallurgyclassic.steel_crusher": "Steel Crusher",
+  "metallurgyclassic.container.crusher.stone": "Stone Crusher",
+  "metallurgyclassic.container.crusher.copper": "Copper Crusher",
+  "metallurgyclassic.container.crusher.bronze": "Bronze Crusher",
+  "metallurgyclassic.container.crusher.iron": "Iron Crusher",
+  "metallurgyclassic.container.crusher.steel": "Steel Crusher"
 }
