Added dusts, nuggets and vanilla items to lang file

--- a/src/main/resources/assets/metallurgyclassic/lang/en_us.json
+++ b/src/main/resources/assets/metallurgyclassic/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.metallurgyclassic.magnesium_igniter": "Magnesium Igniter",
   "block.metallurgyclassic.he_tnt": "HE TNT",
   "block.metallurgyclassic.le_tnt": "LE TNT",
+  "block.metallurgyclassic.copper_ore": "Copper Ore",
   "block.metallurgyclassic.silver_ore": "Silver Ore",
   "block.metallurgyclassic.platinum_ore": "Platinum Ore",
   "block.metallurgyclassic.ignatius_ore": "Ignatius Ore",
@@ -33,6 +34,7 @@
   "block.metallurgyclassic.infuscolium_ore": "Infuscolium Ore",
   "block.metallurgyclassic.rubracium_ore": "Rubracium Ore",
   "block.metallurgyclassic.meutoite_ore": "Meutoite Ore",
+  "block.metallurgyclassic.copper_bricks": "Copper Bricks",
   "block.metallurgyclassic.silver_bricks": "Silver Bricks",
   "block.metallurgyclassic.platinum_bricks": "Platinum Bricks",
   "block.metallurgyclassic.ignatius_bricks": "Ignatius Bricks",
@@ -77,6 +79,7 @@
   "block.metallurgyclassic.celenegil_bricks": "Celenegil Bricks",
   "block.metallurgyclassic.tartarite_bricks": "Tartarite Bricks",
   "block.metallurgyclassic.desichalkos_bricks": "Desichalkos Bricks",
+  "block.metallurgyclassic.copper_block": "Copper Block",
   "block.metallurgyclassic.silver_block": "Silver Block",
   "block.metallurgyclassic.platinum_block": "Platinum Block",
   "block.metallurgyclassic.ignatius_block": "Ignatius Block",
@@ -121,6 +124,7 @@
   "block.metallurgyclassic.celenegil_block": "Celenegil Block",
   "block.metallurgyclassic.tartarite_block": "Tartarite Block",
   "block.metallurgyclassic.desichalkos_block": "Desichalkos Block",
+  "item.metallurgyclassic.raw_copper": "Raw Copper",
   "item.metallurgyclassic.raw_silver": "Raw Silver",
   "item.metallurgyclassic.raw_platinum": "Raw Platinum",
   "item.metallurgyclassic.raw_ignatius": "Raw Ignatius",
@@ -149,6 +153,7 @@
   "item.metallurgyclassic.raw_infuscolium": "Raw Infuscolium",
   "item.metallurgyclassic.raw_rubracium": "Raw Rubracium",
   "item.metallurgyclassic.raw_meutoite": "Raw Meutoite",
+  "item.metallurgyclassic.copper_ingot": "Copper Ingot",
   "item.metallurgyclassic.silver_ingot": "Silver Ingot",
   "item.metallurgyclassic.platinum_ingot": "Platinum Ingot",
   "item.metallurgyclassic.ignatius_ingot": "Ignatius Ingot",
@@ -193,6 +198,7 @@
   "item.metallurgyclassic.celenegil_ingot": "Celenegil Ingot",
   "item.metallurgyclassic.tartarite_ingot": "Tartarite Ingot",
   "item.metallurgyclassic.desichalkos_ingot": "Desichalkos Ingot",
+  "item.metallurgyclassic.copper_dust": "Copper Dust",
   "item.metallurgyclassic.silver_dust": "Silver Dust",
   "item.metallurgyclassic.platinum_dust": "Platinum Dust",
   "item.metallurgyclassic.ignatius_dust": "Ignatius Dust",
@@ -237,6 +243,96 @@
   "item.metallurgyclassic.celenegil_dust": "Celenegil Dust",
   "item.metallurgyclassic.tartarite_dust": "Tartarite Dust",
   "item.metallurgyclassic.desichalkos_dust": "Desichalkos Dust",
+  "item.metallurgyclassic.copper_tiny_dust": "Tiny Copper Dust",
+  "item.metallurgyclassic.silver_tiny_dust": "Tiny Silver Dust",
+  "item.metallurgyclassic.platinum_tiny_dust": "Tiny Platinum Dust",
+  "item.metallurgyclassic.ignatius_tiny_dust": "Tiny Ignatius Dust",
+  "item.metallurgyclassic.shadow_iron_tiny_dust": "Tiny Shadow Iron Dust",
+  "item.metallurgyclassic.midasium_tiny_dust": "Tiny Midasium Dust",
+  "item.metallurgyclassic.vyroxeres_tiny_dust": "Tiny Vyroxeres Dust",
+  "item.metallurgyclassic.ceruclase_tiny_dust": "Tiny Ceruclase Dust",
+  "item.metallurgyclassic.kalendrite_tiny_dust": "Tiny Kalendrite Dust",
+  "item.metallurgyclassic.vulcanite_tiny_dust": "Tiny Vulcanite Dust",
+  "item.metallurgyclassic.sanguinite_tiny_dust": "Tiny Sanguinite Dust",
+  "item.metallurgyclassic.prometheum_tiny_dust": "Tiny Prometheum Dust",
+  "item.metallurgyclassic.deep_iron_tiny_dust": "Tiny Deep Iron Dust",
+  "item.metallurgyclassic.oureclase_tiny_dust": "Tiny Oureclase Dust",
+  "item.metallurgyclassic.astral_silver_tiny_dust": "Tiny Astral Silver Dust",
+  "item.metallurgyclassic.carmot_tiny_dust": "Tiny Carmot Dust",
+  "item.metallurgyclassic.mithril_tiny_dust": "Tiny Mithril Dust",
+  "item.metallurgyclassic.orichalcum_tiny_dust": "Tiny Orichalcum Dust",
+  "item.metallurgyclassic.adamantine_tiny_dust": "Tiny Adamantine Dust",
+  "item.metallurgyclassic.atlarus_tiny_dust": "Tiny Atlarus Dust",
+  "item.metallurgyclassic.eximite_tiny_dust": "Tiny Eximite Dust",
+  "item.metallurgyclassic.tin_tiny_dust": "Tiny Tin Dust",
+  "item.metallurgyclassic.manganese_tiny_dust": "Tiny Manganese Dust",
+  "item.metallurgyclassic.zinc_tiny_dust": "Tiny Zinc Dust",
+  "item.metallurgyclassic.lemurite_tiny_dust": "Tiny Lemurite Dust",
+  "item.metallurgyclassic.alduorite_tiny_dust": "Tiny Alduorite Dust",
+  "item.metallurgyclassic.infuscolium_tiny_dust": "Tiny Infuscolium Dust",
+  "item.metallurgyclassic.rubracium_tiny_dust": "Tiny Rubracium Dust",
+  "item.metallurgyclassic.meutoite_tiny_dust": "Tiny Meutoite Dust",
+  "item.metallurgyclassic.bronze_tiny_dust": "Tiny Bronze Dust",
+  "item.metallurgyclassic.hepatizon_tiny_dust": "Tiny Hepatizon Dust",
+  "item.metallurgyclassic.damascus_steel_tiny_dust": "Tiny Damascus Steel Dust",
+  "item.metallurgyclassic.angmallen_tiny_dust": "Tiny Angmallen Dust",
+  "item.metallurgyclassic.steel_tiny_dust": "Tiny Steel Dust",
+  "item.metallurgyclassic.brass_tiny_dust": "Tiny Brass Dust",
+  "item.metallurgyclassic.electrum_tiny_dust": "Tiny Electrum Dust",
+  "item.metallurgyclassic.shadow_steel_tiny_dust": "Tiny Shadow Steel Dust",
+  "item.metallurgyclassic.inolashite_tiny_dust": "Tiny Inolashite Dust",
+  "item.metallurgyclassic.amordrine_tiny_dust": "Tiny Amordrine Dust",
+  "item.metallurgyclassic.black_steel_tiny_dust": "Tiny Black Steel Dust",
+  "item.metallurgyclassic.quicksilver_tiny_dust": "Tiny Quicksilver Dust",
+  "item.metallurgyclassic.haderoth_tiny_dust": "Tiny Haderoth Dust",
+  "item.metallurgyclassic.celenegil_tiny_dust": "Tiny Celenegil Dust",
+  "item.metallurgyclassic.tartarite_tiny_dust": "Tiny Tartarite Dust",
+  "item.metallurgyclassic.desichalkos_tiny_dust": "Tiny Desichalkos Dust",
+  "item.metallurgyclassic.copper_nugget": "Copper Nugget",
+  "item.metallurgyclassic.silver_nugget": "Silver Nugget",
+  "item.metallurgyclassic.platinum_nugget": "Platinum Nugget",
+  "item.metallurgyclassic.ignatius_nugget": "Ignatius Nugget",
+  "item.metallurgyclassic.shadow_iron_nugget": "Shadow Iron Nugget",
+  "item.metallurgyclassic.midasium_nugget": "Midasium Nugget",
+  "item.metallurgyclassic.vyroxeres_nugget": "Vyroxeres Nugget",
+  "item.metallurgyclassic.ceruclase_nugget": "Ceruclase Nugget",
+  "item.metallurgyclassic.kalendrite_nugget": "Kalendrite Nugget",
+  "item.metallurgyclassic.vulcanite_nugget": "Vulcanite Nugget",
+  "item.metallurgyclassic.sanguinite_nugget": "Sanguinite Nugget",
+  "item.metallurgyclassic.prometheum_nugget": "Prometheum Nugget",
+  "item.metallurgyclassic.deep_iron_nugget": "Deep Iron Nugget",
+  "item.metallurgyclassic.oureclase_nugget": "Oureclase Nugget",
+  "item.metallurgyclassic.astral_silver_nugget": "Astral Silver Nugget",
+  "item.metallurgyclassic.carmot_nugget": "Carmot Nugget",
+  "item.metallurgyclassic.mithril_nugget": "Mithril Nugget",
+  "item.metallurgyclassic.orichalcum_nugget": "Orichalcum Nugget",
+  "item.metallurgyclassic.adamantine_nugget": "Adamantine Nugget",
+  "item.metallurgyclassic.atlarus_nugget": "Atlarus Nugget",
+  "item.metallurgyclassic.eximite_nugget": "Eximite Nugget",
+  "item.metallurgyclassic.tin_nugget": "Tin Nugget",
+  "item.metallurgyclassic.manganese_nugget": "Manganese Nugget",
+  "item.metallurgyclassic.zinc_nugget": "Zinc Nugget",
+  "item.metallurgyclassic.lemurite_nugget": "Lemurite Nugget",
+  "item.metallurgyclassic.alduorite_nugget": "Alduorite Nugget",
+  "item.metallurgyclassic.infuscolium_nugget": "Infuscolium Nugget",
+  "item.metallurgyclassic.rubracium_nugget": "Rubracium Nugget",
+  "item.metallurgyclassic.meutoite_nugget": "Meutoite Nugget",
+  "item.metallurgyclassic.bronze_nugget": "Bronze Nugget",
+  "item.metallurgyclassic.hepatizon_nugget": "Hepatizon Nugget",
+  "item.metallurgyclassic.damascus_steel_nugget": "Damascus Steel Nugget",
+  "item.metallurgyclassic.angmallen_nugget": "Angmallen Nugget",
+  "item.metallurgyclassic.steel_nugget": "Steel Nugget",
+  "item.metallurgyclassic.brass_nugget": "Brass Nugget",
+  "item.metallurgyclassic.electrum_nugget": "Electrum Nugget",
+  "item.metallurgyclassic.shadow_steel_nugget": "Shadow Steel Nugget",
+  "item.metallurgyclassic.inolashite_nugget": "Inolashite Nugget",
+  "item.metallurgyclassic.amordrine_nugget": "Amordrine Nugget",
+  "item.metallurgyclassic.black_steel_nugget": "Black Steel Nugget",
+  "item.metallurgyclassic.quicksilver_nugget": "Quicksilver Nugget",
+  "item.metallurgyclassic.haderoth_nugget": "Haderoth Nugget",
+  "item.metallurgyclassic.celenegil_nugget": "Celenegil Nugget",
+  "item.metallurgyclassic.tartarite_nugget": "Tartarite Nugget",
+  "item.metallurgyclassic.desichalkos_nugget": "Desichalkos Nugget",
   "block.metallurgyclassic.copper_furnace": "Copper Furnace",
   "block.metallurgyclassic.bronze_furnace": "Bronze Furnace",
   "block.metallurgyclassic.iron_furnace": "Iron Furnace",
@@ -267,6 +363,7 @@
   "metallurgyclassic.container.chest.gold": "Gold Chest",
   "metallurgyclassic.container.chest.electrum": "Electrum Chest",
   "metallurgyclassic.container.chest.platinum": "Platinum Chest",
+  "item.metallurgyclassic.copper_axe": "Copper Axe",
   "item.metallurgyclassic.silver_axe": "Silver Axe",
   "item.metallurgyclassic.platinum_axe": "Platinum Axe",
   "item.metallurgyclassic.ignatius_axe": "Ignatius Axe",
@@ -303,6 +400,7 @@
   "item.metallurgyclassic.celenegil_axe": "Celenegil Axe",
   "item.metallurgyclassic.tartarite_axe": "Tartarite Axe",
   "item.metallurgyclassic.desichalkos_axe": "Desichalkos Axe",
+  "item.metallurgyclassic.copper_hoe": "Copper Hoe",
   "item.metallurgyclassic.silver_hoe": "Silver Hoe",
   "item.metallurgyclassic.platinum_hoe": "Platinum Hoe",
   "item.metallurgyclassic.ignatius_hoe": "Ignatius Hoe",
@@ -339,6 +437,7 @@
   "item.metallurgyclassic.celenegil_hoe": "Celenegil Hoe",
   "item.metallurgyclassic.tartarite_hoe": "Tartarite Hoe",
   "item.metallurgyclassic.desichalkos_hoe": "Desichalkos Hoe",
+  "item.metallurgyclassic.copper_pickaxe": "Copper Pickaxe",
   "item.metallurgyclassic.silver_pickaxe": "Silver Pickaxe",
   "item.metallurgyclassic.platinum_pickaxe": "Platinum Pickaxe",
   "item.metallurgyclassic.ignatius_pickaxe": "Ignatius Pickaxe",
@@ -375,6 +474,7 @@
   "item.metallurgyclassic.celenegil_pickaxe": "Celenegil Pickaxe",
   "item.metallurgyclassic.tartarite_pickaxe": "Tartarite Pickaxe",
   "item.metallurgyclassic.desichalkos_pickaxe": "Desichalkos Pickaxe",
+  "item.metallurgyclassic.copper_shovel": "Copper Shovel",
   "item.metallurgyclassic.silver_shovel": "Silver Shovel",
   "item.metallurgyclassic.platinum_shovel": "Platinum Shovel",
   "item.metallurgyclassic.ignatius_shovel": "Ignatius Shovel",
@@ -411,6 +511,7 @@
   "item.metallurgyclassic.celenegil_shovel": "Celenegil Shovel",
   "item.metallurgyclassic.tartarite_shovel": "Tartarite Shovel",
   "item.metallurgyclassic.desichalkos_shovel": "Desichalkos Shovel",
+  "item.metallurgyclassic.copper_sword": "Copper Sword",
   "item.metallurgyclassic.silver_sword": "Silver Sword",
   "item.metallurgyclassic.platinum_sword": "Platinum Sword",
   "item.metallurgyclassic.ignatius_sword": "Ignatius Sword",
@@ -447,6 +548,7 @@
   "item.metallurgyclassic.celenegil_sword": "Celenegil Sword",
   "item.metallurgyclassic.tartarite_sword": "Tartarite Sword",
   "item.metallurgyclassic.desichalkos_sword": "Desichalkos Sword",
+  "item.metallurgyclassic.copper_helmet": "Copper Helmet",
   "item.metallurgyclassic.silver_helmet": "Silver Helmet",
   "item.metallurgyclassic.platinum_helmet": "Platinum Helmet",
   "item.metallurgyclassic.ignatius_helmet": "Ignatius Helmet",
@@ -483,6 +585,7 @@
   "item.metallurgyclassic.celenegil_helmet": "Celenegil Helmet",
   "item.metallurgyclassic.tartarite_helmet": "Tartarite Helmet",
   "item.metallurgyclassic.desichalkos_helmet": "Desichalkos Helmet",
+  "item.metallurgyclassic.copper_chestplate": "Copper Chestplate",
   "item.metallurgyclassic.silver_chestplate": "Silver Chestplate",
   "item.metallurgyclassic.platinum_chestplate": "Platinum Chestplate",
   "item.metallurgyclassic.ignatius_chestplate": "Ignatius Chestplate",
@@ -519,6 +622,7 @@
   "item.metallurgyclassic.celenegil_chestplate": "Celenegil Chestplate",
   "item.metallurgyclassic.tartarite_chestplate": "Tartarite Chestplate",
   "item.metallurgyclassic.desichalkos_chestplate": "Desichalkos Chestplate",
+  "item.metallurgyclassic.copper_leggings": "Copper Leggings",
   "item.metallurgyclassic.silver_leggings": "Silver Leggings",
   "item.metallurgyclassic.platinum_leggings": "Platinum Leggings",
   "item.metallurgyclassic.ignatius_leggings": "Ignatius Leggings",
@@ -555,6 +659,7 @@
   "item.metallurgyclassic.celenegil_leggings": "Celenegil Leggings",
   "item.metallurgyclassic.tartarite_leggings": "Tartarite Leggings",
   "item.metallurgyclassic.desichalkos_leggings": "Desichalkos Leggings",
+  "item.metallurgyclassic.copper_boots": "Copper Boots",
   "item.metallurgyclassic.silver_boots": "Silver Boots",
   "item.metallurgyclassic.platinum_boots": "Platinum Boots",
   "item.metallurgyclassic.ignatius_boots": "Ignatius Boots",
@@ -600,5 +705,11 @@
   "metallurgyclassic.container.crusher.copper": "Copper Crusher",
   "metallurgyclassic.container.crusher.bronze": "Bronze Crusher",
   "metallurgyclassic.container.crusher.iron": "Iron Crusher",
-  "metallurgyclassic.container.crusher.steel": "Steel Crusher"
+  "metallurgyclassic.container.crusher.steel": "Steel Crusher",
+  "block.metallurgyclassic.iron_bricks": "Iron Bricks",
+  "block.metallurgyclassic.gold_bricks": "Gold Bricks",
+  "item.metallurgyclassic.iron_dust": "Iron Dust",
+  "item.metallurgyclassic.gold_dust": "Gold Dust",
+  "item.metallurgyclassic.iron_tiny_dust": "Tiny Iron Dust",
+  "item.metallurgyclassic.gold_tiny_dust": "Tiny Gold Dust"
 }
