Fixed typo in Adlourite name

--- a/src/main/resources/assets/metallurgyclassic/lang/en_us.json
+++ b/src/main/resources/assets/metallurgyclassic/lang/en_us.json
@@ -30,7 +30,7 @@
   "block.metallurgyclassic.manganese_ore_stone": "Manganese Ore",
   "block.metallurgyclassic.zinc_ore_stone": "Zinc Ore",
   "block.metallurgyclassic.lemurite_ore_stone": "Lemurite Ore",
-  "block.metallurgyclassic.alduorite_ore_stone": "Alduorite Ore",
+  "block.metallurgyclassic.adluorite_ore_stone": "Adluorite Ore",
   "block.metallurgyclassic.infuscolium_ore_stone": "Infuscolium Ore",
   "block.metallurgyclassic.rubracium_ore_stone": "Rubracium Ore",
   "block.metallurgyclassic.meutoite_ore_stone": "Meutoite Ore",
@@ -59,7 +59,7 @@
   "block.metallurgyclassic.manganese_ore_granite": "Manganese Ore",
   "block.metallurgyclassic.zinc_ore_granite": "Zinc Ore",
   "block.metallurgyclassic.lemurite_ore_granite": "Lemurite Ore",
-  "block.metallurgyclassic.alduorite_ore_granite": "Alduorite Ore",
+  "block.metallurgyclassic.adluorite_ore_granite": "Adluorite Ore",
   "block.metallurgyclassic.infuscolium_ore_granite": "Infuscolium Ore",
   "block.metallurgyclassic.rubracium_ore_granite": "Rubracium Ore",
   "block.metallurgyclassic.meutoite_ore_granite": "Meutoite Ore",
@@ -88,7 +88,7 @@
   "block.metallurgyclassic.manganese_ore_andesite": "Manganese Ore",
   "block.metallurgyclassic.zinc_ore_andesite": "Zinc Ore",
   "block.metallurgyclassic.lemurite_ore_andesite": "Lemurite Ore",
-  "block.metallurgyclassic.alduorite_ore_andesite": "Alduorite Ore",
+  "block.metallurgyclassic.adluorite_ore_andesite": "Adluorite Ore",
   "block.metallurgyclassic.infuscolium_ore_andesite": "Infuscolium Ore",
   "block.metallurgyclassic.rubracium_ore_andesite": "Rubracium Ore",
   "block.metallurgyclassic.meutoite_ore_andesite": "Meutoite Ore",
@@ -117,11 +117,11 @@
   "block.metallurgyclassic.manganese_ore_diorite": "Manganese Ore",
   "block.metallurgyclassic.zinc_ore_diorite": "Zinc Ore",
   "block.metallurgyclassic.lemurite_ore_diorite": "Lemurite Ore",
-  "block.metallurgyclassic.alduorite_ore_diorite": "Alduorite Ore",
+  "block.metallurgyclassic.adluorite_ore_diorite": "Adluorite Ore",
   "block.metallurgyclassic.infuscolium_ore_diorite": "Infuscolium Ore",
   "block.metallurgyclassic.rubracium_ore_diorite": "Rubracium Ore",
   "block.metallurgyclassic.meutoite_ore_diorite": "Meutoite Ore",
-  "block.metallurgyclassic.copper_ore_deepslate": "CopperOre",
+  "block.metallurgyclassic.copper_ore_deepslate": "Copper Ore",
   "block.metallurgyclassic.silver_ore_deepslate": "Silver Ore",
   "block.metallurgyclassic.platinum_ore_deepslate": "Platinum Ore",
   "block.metallurgyclassic.ignatius_ore_deepslate": "Ignatius Ore",
@@ -146,7 +146,7 @@
   "block.metallurgyclassic.manganese_ore_deepslate": "Manganese Ore",
   "block.metallurgyclassic.zinc_ore_deepslate": "Zinc Ore",
   "block.metallurgyclassic.lemurite_ore_deepslate": "Lemurite Ore",
-  "block.metallurgyclassic.alduorite_ore_deepslate": "Alduorite Ore",
+  "block.metallurgyclassic.adluorite_ore_deepslate": "Adluorite Ore",
   "block.metallurgyclassic.infuscolium_ore_deepslate": "Infuscolium Ore",
   "block.metallurgyclassic.rubracium_ore_deepslate": "Rubracium Ore",
   "block.metallurgyclassic.meutoite_ore_deepslate": "Meutoite Ore",
@@ -175,7 +175,7 @@
   "block.metallurgyclassic.manganese_ore_netherrack": "Manganese Ore",
   "block.metallurgyclassic.zinc_ore_netherrack": "Zinc Ore",
   "block.metallurgyclassic.lemurite_ore_netherrack": "Lemurite Ore",
-  "block.metallurgyclassic.alduorite_ore_netherrack": "Alduorite Ore",
+  "block.metallurgyclassic.adluorite_ore_netherrack": "Adluorite Ore",
   "block.metallurgyclassic.infuscolium_ore_netherrack": "Infuscolium Ore",
   "block.metallurgyclassic.rubracium_ore_netherrack": "Rubracium Ore",
   "block.metallurgyclassic.meutoite_ore_netherrack": "Meutoite Ore",
@@ -204,7 +204,7 @@
   "block.metallurgyclassic.manganese_ore_basalt": "Manganese Ore",
   "block.metallurgyclassic.zinc_ore_basalt": "Zinc Ore",
   "block.metallurgyclassic.lemurite_ore_basalt": "Lemurite Ore",
-  "block.metallurgyclassic.alduorite_ore_basalt": "Alduorite Ore",
+  "block.metallurgyclassic.adluorite_ore_basalt": "Adluorite Ore",
   "block.metallurgyclassic.infuscolium_ore_basalt": "Infuscolium Ore",
   "block.metallurgyclassic.rubracium_ore_basalt": "Rubracium Ore",
   "block.metallurgyclassic.meutoite_ore_basalt": "Meutoite Ore",
@@ -233,7 +233,7 @@
   "block.metallurgyclassic.manganese_ore_end_stone": "Manganese Ore",
   "block.metallurgyclassic.zinc_ore_end_stone": "Zinc Ore",
   "block.metallurgyclassic.lemurite_ore_end_stone": "Lemurite Ore",
-  "block.metallurgyclassic.alduorite_ore_end_stone": "Alduorite Ore",
+  "block.metallurgyclassic.adluorite_ore_end_stone": "Adluorite Ore",
   "block.metallurgyclassic.infuscolium_ore_end_stone": "Infuscolium Ore",
   "block.metallurgyclassic.rubracium_ore_end_stone": "Rubracium Ore",
   "block.metallurgyclassic.meutoite_ore_end_stone": "Meutoite Ore",
@@ -262,7 +262,7 @@
   "block.metallurgyclassic.manganese_bricks": "Manganese Bricks",
   "block.metallurgyclassic.zinc_bricks": "Zinc Bricks",
   "block.metallurgyclassic.lemurite_bricks": "Lemurite Bricks",
-  "block.metallurgyclassic.alduorite_bricks": "Alduorite Bricks",
+  "block.metallurgyclassic.adluorite_bricks": "Adluorite Bricks",
   "block.metallurgyclassic.infuscolium_bricks": "Infuscolium Bricks",
   "block.metallurgyclassic.rubracium_bricks": "Rubracium Bricks",
   "block.metallurgyclassic.meutoite_bricks": "Meutoite Bricks",
@@ -307,7 +307,7 @@
   "block.metallurgyclassic.manganese_block": "Manganese Block",
   "block.metallurgyclassic.zinc_block": "Zinc Block",
   "block.metallurgyclassic.lemurite_block": "Lemurite Block",
-  "block.metallurgyclassic.alduorite_block": "Alduorite Block",
+  "block.metallurgyclassic.adluorite_block": "Adluorite Block",
   "block.metallurgyclassic.infuscolium_block": "Infuscolium Block",
   "block.metallurgyclassic.rubracium_block": "Rubracium Block",
   "block.metallurgyclassic.meutoite_block": "Meutoite Block",
@@ -352,7 +352,7 @@
   "item.metallurgyclassic.raw_manganese": "Raw Manganese",
   "item.metallurgyclassic.raw_zinc": "Raw Zinc",
   "item.metallurgyclassic.raw_lemurite": "Raw Lemurite",
-  "item.metallurgyclassic.raw_alduorite": "Raw Alduorite",
+  "item.metallurgyclassic.raw_adluorite": "Raw Adluorite",
   "item.metallurgyclassic.raw_infuscolium": "Raw Infuscolium",
   "item.metallurgyclassic.raw_rubracium": "Raw Rubracium",
   "item.metallurgyclassic.raw_meutoite": "Raw Meutoite",
@@ -381,7 +381,7 @@
   "item.metallurgyclassic.manganese_ingot": "Manganese Ingot",
   "item.metallurgyclassic.zinc_ingot": "Zinc Ingot",
   "item.metallurgyclassic.lemurite_ingot": "Lemurite Ingot",
-  "item.metallurgyclassic.alduorite_ingot": "Alduorite Ingot",
+  "item.metallurgyclassic.adluorite_ingot": "Adluorite Ingot",
   "item.metallurgyclassic.infuscolium_ingot": "Infuscolium Ingot",
   "item.metallurgyclassic.rubracium_ingot": "Rubracium Ingot",
   "item.metallurgyclassic.meutoite_ingot": "Meutoite Ingot",
@@ -426,7 +426,7 @@
   "item.metallurgyclassic.manganese_dust": "Manganese Dust",
   "item.metallurgyclassic.zinc_dust": "Zinc Dust",
   "item.metallurgyclassic.lemurite_dust": "Lemurite Dust",
-  "item.metallurgyclassic.alduorite_dust": "Alduorite Dust",
+  "item.metallurgyclassic.adluorite_dust": "Adluorite Dust",
   "item.metallurgyclassic.infuscolium_dust": "Infuscolium Dust",
   "item.metallurgyclassic.rubracium_dust": "Rubracium Dust",
   "item.metallurgyclassic.meutoite_dust": "Meutoite Dust",
@@ -471,7 +471,7 @@
   "item.metallurgyclassic.manganese_tiny_dust": "Tiny Manganese Dust",
   "item.metallurgyclassic.zinc_tiny_dust": "Tiny Zinc Dust",
   "item.metallurgyclassic.lemurite_tiny_dust": "Tiny Lemurite Dust",
-  "item.metallurgyclassic.alduorite_tiny_dust": "Tiny Alduorite Dust",
+  "item.metallurgyclassic.adluorite_tiny_dust": "Tiny Adluorite Dust",
   "item.metallurgyclassic.infuscolium_tiny_dust": "Tiny Infuscolium Dust",
   "item.metallurgyclassic.rubracium_tiny_dust": "Tiny Rubracium Dust",
   "item.metallurgyclassic.meutoite_tiny_dust": "Tiny Meutoite Dust",
@@ -516,7 +516,7 @@
   "item.metallurgyclassic.manganese_nugget": "Manganese Nugget",
   "item.metallurgyclassic.zinc_nugget": "Zinc Nugget",
   "item.metallurgyclassic.lemurite_nugget": "Lemurite Nugget",
-  "item.metallurgyclassic.alduorite_nugget": "Alduorite Nugget",
+  "item.metallurgyclassic.adluorite_nugget": "Adluorite Nugget",
   "item.metallurgyclassic.infuscolium_nugget": "Infuscolium Nugget",
   "item.metallurgyclassic.rubracium_nugget": "Rubracium Nugget",
   "item.metallurgyclassic.meutoite_nugget": "Meutoite Nugget",
