Fixed utility ore translation

--- a/src/main/resources/assets/metallurgyclassic/lang/en_us.json
+++ b/src/main/resources/assets/metallurgyclassic/lang/en_us.json
@@ -551,12 +551,54 @@
   "item.metallurgyclassic.raw_magnesium": "Magnesium",
   "item.metallurgyclassic.raw_bitumen": "Bitumen",
   "item.metallurgyclassic.raw_potash": "Potash",
-  "block.metallurgyclassic.sulfur_ore": "Sulfur Ore",
-  "block.metallurgyclassic.phosphorite_ore": "Phosphorite Ore",
-  "block.metallurgyclassic.saltpeter_ore": "Saltpeter Ore",
-  "block.metallurgyclassic.magnesium_ore": "Magnesium Ore",
-  "block.metallurgyclassic.bitumen_ore": "Bitumen Ore",
-  "block.metallurgyclassic.potash_ore": "Potash Ore",
+  "block.metallurgyclassic.sulfur_ore_stone": "Sulfur Ore",
+  "block.metallurgyclassic.phosphorite_ore_stone": "Phosphorite Ore",
+  "block.metallurgyclassic.saltpeter_ore_stone": "Saltpeter Ore",
+  "block.metallurgyclassic.magnesium_ore_stone": "Magnesium Ore",
+  "block.metallurgyclassic.bitumen_ore_stone": "Bitumen Ore",
+  "block.metallurgyclassic.potash_ore_stone": "Potash Ore",
+  "block.metallurgyclassic.sulfur_ore_granite": "Sulfur Ore",
+  "block.metallurgyclassic.phosphorite_ore_granite": "Phosphorite Ore",
+  "block.metallurgyclassic.saltpeter_ore_granite": "Saltpeter Ore",
+  "block.metallurgyclassic.magnesium_ore_granite": "Magnesium Ore",
+  "block.metallurgyclassic.bitumen_ore_granite": "Bitumen Ore",
+  "block.metallurgyclassic.potash_ore_granite": "Potash Ore",
+  "block.metallurgyclassic.sulfur_ore_andesite": "Sulfur Ore",
+  "block.metallurgyclassic.phosphorite_ore_andesite": "Phosphorite Ore",
+  "block.metallurgyclassic.saltpeter_ore_andesite": "Saltpeter Ore",
+  "block.metallurgyclassic.magnesium_ore_andesite": "Magnesium Ore",
+  "block.metallurgyclassic.bitumen_ore_andesite": "Bitumen Ore",
+  "block.metallurgyclassic.potash_ore_andesite": "Potash Ore",
+  "block.metallurgyclassic.sulfur_ore_diorite": "Sulfur Ore",
+  "block.metallurgyclassic.phosphorite_ore_diorite": "Phosphorite Ore",
+  "block.metallurgyclassic.saltpeter_ore_diorite": "Saltpeter Ore",
+  "block.metallurgyclassic.magnesium_ore_diorite": "Magnesium Ore",
+  "block.metallurgyclassic.bitumen_ore_diorite": "Bitumen Ore",
+  "block.metallurgyclassic.potash_ore_diorite": "Potash Ore",
+  "block.metallurgyclassic.sulfur_ore_deepslate": "Sulfur Ore",
+  "block.metallurgyclassic.phosphorite_ore_deepslate": "Phosphorite Ore",
+  "block.metallurgyclassic.saltpeter_ore_deepslate": "Saltpeter Ore",
+  "block.metallurgyclassic.magnesium_ore_deepslate": "Magnesium Ore",
+  "block.metallurgyclassic.bitumen_ore_deepslate": "Bitumen Ore",
+  "block.metallurgyclassic.potash_ore_deepslate": "Potash Ore",
+  "block.metallurgyclassic.sulfur_ore_netherrack": "Sulfur Ore",
+  "block.metallurgyclassic.phosphorite_ore_netherrack": "Phosphorite Ore",
+  "block.metallurgyclassic.saltpeter_ore_netherrack": "Saltpeter Ore",
+  "block.metallurgyclassic.magnesium_ore_netherrack": "Magnesium Ore",
+  "block.metallurgyclassic.bitumen_ore_netherrack": "Bitumen Ore",
+  "block.metallurgyclassic.potash_ore_netherrack": "Potash Ore",
+  "block.metallurgyclassic.sulfur_ore_basalt": "Sulfur Ore",
+  "block.metallurgyclassic.phosphorite_ore_basalt": "Phosphorite Ore",
+  "block.metallurgyclassic.saltpeter_ore_basalt": "Saltpeter Ore",
+  "block.metallurgyclassic.magnesium_ore_basalt": "Magnesium Ore",
+  "block.metallurgyclassic.bitumen_ore_basalt": "Bitumen Ore",
+  "block.metallurgyclassic.potash_ore_basalt": "Potash Ore",
+  "block.metallurgyclassic.sulfur_ore_end_stone": "Sulfur Ore",
+  "block.metallurgyclassic.phosphorite_ore_end_stone": "Phosphorite Ore",
+  "block.metallurgyclassic.saltpeter_ore_end_stone": "Saltpeter Ore",
+  "block.metallurgyclassic.magnesium_ore_end_stone": "Magnesium Ore",
+  "block.metallurgyclassic.bitumen_ore_end_stone": "Bitumen Ore",
+  "block.metallurgyclassic.potash_ore_end_stone": "Potash Ore",
   "metallurgyclassic.container.furnace.copper": "Copper Furnace",
   "metallurgyclassic.container.furnace.bronze": "Bronze Furnace",
   "metallurgyclassic.container.furnace.iron": "Iron Furnace",
